# Discord-Event-Registrator-forGC

./: .gitignore  Dockerfile  client.py  docker-compose.yml  main.py  pyproject.toml
.github/workflows/: action.yml
lib/: GoogleCalendarAPIWrapper.py  client.py
lib/datastructure/: calendarEvent.py  entry.py
lib/typedef/: gapi_calendar_v3_structs.py
lib/util/: __init__.py  debugging.py
manifest/: der-forgc.yml
